# warroom

./: .env.example  .gitignore  CLAUDE.md  README.md  demo.py  pyproject.toml  serve.py
docs/: architecture.md  decisions.md
